[gd_scene load_steps=11 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/scripts/tracked_obj_dev.gd" type="Script" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.027451, 0.298039, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0470588, 0.756863, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.380392, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.0980392, 0.32549, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0196078, 0, 0.745098, 1 )

[node name="Q_recog_tracked_dev" type="Position3D"]
script = ExtResource( 1 )

[node name="OQ_VisibilityToggle" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.675199, 0, 0, 0, 0.647651, 0.190897, 0, -0.190897, 0.647652, 0, 0.176689, -0.0791197 )

[node name="OQ_UI2DCanvas" parent="OQ_VisibilityToggle" instance=ExtResource( 4 )]
editor_live_update = true
transparent = true

[node name="Control" type="ReferenceRect" parent="OQ_VisibilityToggle/OQ_UI2DCanvas"]
margin_right = 240.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="Button" parent="OQ_VisibilityToggle/OQ_UI2DCanvas/Control"]
anchor_right = 0.375
anchor_bottom = 0.32
margin_right = -3.05176e-05
margin_bottom = -3.05176e-05
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "ADD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete" type="Button" parent="OQ_VisibilityToggle/OQ_UI2DCanvas/Control"]
anchor_left = 0.625
anchor_right = 1.003
anchor_bottom = 0.32
margin_left = 6.10352e-05
margin_right = -0.0720215
margin_bottom = -4.57764e-05
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "DELETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="OQ_VisibilityToggle/OQ_UI2DCanvas/Control"]
anchor_left = 0.375
anchor_right = 0.625
anchor_bottom = 0.32
margin_left = -3.05176e-05
margin_bottom = -1.52588e-05
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OQ_UILabel" parent="OQ_VisibilityToggle" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 5.96046e-08, 0, 1, -1.19209e-07, 0, 2.98023e-08, 1, -0.0621135, -0.0274144, 7.45058e-09 )
text = "state"
font_size_multiplier = 0.5
background_color = Color( 0, 0, 0, 0 )
transparent = true

[node name="OQ_UILabel2" parent="OQ_VisibilityToggle" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 1.19209e-07, 0, 1, -5.96046e-08, 0, 2.98023e-08, 1, 0.0576556, -0.0274144, 7.45058e-09 )
text = "result"
font_size_multiplier = 0.5
background_color = Color( 0, 0, 0, 0 )
transparent = true
[connection signal="pressed" from="OQ_VisibilityToggle/OQ_UI2DCanvas/Control/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="OQ_VisibilityToggle/OQ_UI2DCanvas/Control/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="OQ_VisibilityToggle/OQ_UI2DCanvas/Control/cancel" to="." method="_on_cancel_pressed"]
